// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SaveUrlMenu > matches snapshot in URL mode 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mb-1 flex items-center justify-between px-1"
    >
      <span
        class="flex min-w-0 items-baseline gap-1.5 text-body-md font-medium text-ink dark:text-dk-ink"
      >
        <span>
          Save
        </span>
        <span
          class="truncate text-body-sm font-normal text-muted dark:text-dk-muted"
        >
          example.com/very/long/path?query=1
        </span>
        <span>
          to:
        </span>
      </span>
      <div
        class="flex items-center gap-1.5"
      >
        <input
          accept=".pdf,.txt,.md,.docx,.csv,.epub,.avif,.bmp,.gif,.ico,.jp2,.png,.webp,.tif,.tiff,.heic,.heif,.jpeg,.jpg,.jpe,.3g2,.3gp,.aac,.aif,.aifc,.aiff,.amr,.au,.avi,.cda,.m4a,.mid,.mp3,.mp4,.mpeg,.ogg,.opus,.ra,.ram,.snd,.wav,.wma"
          class="hidden"
          multiple=""
          type="file"
        />
        <button
          class="rounded p-1 text-muted transition-colors hover:bg-container-low hover:text-ink disabled:cursor-not-allowed disabled:opacity-40 dark:text-dk-muted dark:hover:bg-dk-cont-low dark:hover:text-dk-ink"
          title="Refresh notebooks"
          type="button"
        >
          <svg
            class="h-3.5 w-3.5"
            fill="currentColor"
            viewBox="0 0 20 20"
          >
            <title>
              Refresh icon
            </title>
            <path
              clip-rule="evenodd"
              d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="overflow-hidden rounded-item border border-outline/60 bg-container shadow-elev2 dark:border-dk-outline/60 dark:bg-dk-container"
    >
      <button
        class="flex w-full items-center gap-2.5 px-3 py-2.5 text-left transition-colors hover:bg-container-low disabled:cursor-not-allowed disabled:opacity-60 dark:hover:bg-dk-cont-low"
        type="button"
      >
        <span
          class="flex h-7 w-7 shrink-0 items-center justify-center rounded-[8px] bg-primary-cont dark:bg-dk-prim-cont"
        >
          <svg
            class="h-3.5 w-3.5 text-primary dark:text-dk-primary"
            fill="currentColor"
            viewBox="0 0 20 20"
          >
            <title>
              New notebook icon
            </title>
            <path
              d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
            />
          </svg>
        </span>
        <span
          class="text-body-md font-medium text-primary dark:text-dk-primary"
        >
          New notebook
        </span>
      </button>
      <div
        class="border-t border-outline/40 dark:border-dk-outline/40"
      >
        <ul
          class="max-h-45 overflow-y-auto"
        >
          <li>
            <button
              class="flex w-full items-center gap-2.5 px-3 py-2.5 text-left transition-colors hover:bg-container-low disabled:cursor-not-allowed disabled:opacity-60 dark:hover:bg-dk-cont-low"
              title="Add current tab to Research Notes"
              type="button"
            >
              <span
                class="flex h-7 w-7 shrink-0 items-center justify-center rounded-[8px] bg-container-low text-sm dark:bg-dk-cont-low"
              >
                📘
              </span>
              <span
                class="min-w-0 flex-1 truncate text-body-md font-medium text-ink dark:text-dk-ink"
              >
                Research Notes
              </span>
              <span
                class="shrink-0 rounded-chip bg-container-low px-1.5 py-0.5 text-label-sm text-muted dark:bg-dk-cont-low dark:text-dk-muted"
              >
                4
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SaveUrlMenu > matches snapshot in files mode with pending files 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mb-1 flex items-center justify-between px-1"
    >
      <span
        class="flex min-w-0 items-baseline gap-1.5 text-body-md font-medium text-ink dark:text-dk-ink"
      >
        <span>
          Upload files
        </span>
        <span
          class="truncate text-body-sm font-normal text-muted dark:text-dk-muted"
        >
          2 files
        </span>
        <span>
          to:
        </span>
      </span>
      <div
        class="flex items-center gap-1.5"
      >
        <input
          accept=".pdf,.txt,.md,.docx,.csv,.epub,.avif,.bmp,.gif,.ico,.jp2,.png,.webp,.tif,.tiff,.heic,.heif,.jpeg,.jpg,.jpe,.3g2,.3gp,.aac,.aif,.aifc,.aiff,.amr,.au,.avi,.cda,.m4a,.mid,.mp3,.mp4,.mpeg,.ogg,.opus,.ra,.ram,.snd,.wav,.wma"
          class="hidden"
          multiple=""
          type="file"
        />
        <button
          class="rounded px-2 py-1 text-label-sm font-medium text-primary transition-colors hover:bg-container-low disabled:cursor-not-allowed disabled:opacity-40 dark:text-dk-primary dark:hover:bg-dk-cont-low"
          title="Choose files"
          type="button"
        >
          Choose files
        </button>
        <button
          class="rounded p-1 text-muted transition-colors hover:bg-container-low hover:text-ink disabled:cursor-not-allowed disabled:opacity-40 dark:text-dk-muted dark:hover:bg-dk-cont-low dark:hover:text-dk-ink"
          title="Refresh notebooks"
          type="button"
        >
          <svg
            class="h-3.5 w-3.5"
            fill="currentColor"
            viewBox="0 0 20 20"
          >
            <title>
              Refresh icon
            </title>
            <path
              clip-rule="evenodd"
              d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="mb-2 flex items-center justify-between rounded-item bg-container-low px-3 py-1.5 text-body-sm text-muted dark:bg-dk-cont-low dark:text-dk-muted"
    >
      <span>
        Files selected.
      </span>
      <button
        class="text-label-sm font-medium text-primary transition-colors hover:text-ink dark:text-dk-primary dark:hover:text-dk-ink"
        type="button"
      >
        Clear
      </button>
    </div>
    <div
      class="overflow-hidden rounded-item border border-outline/60 bg-container shadow-elev2 dark:border-dk-outline/60 dark:bg-dk-container"
    >
      <button
        class="flex w-full items-center gap-2.5 px-3 py-2.5 text-left transition-colors hover:bg-container-low disabled:cursor-not-allowed disabled:opacity-60 dark:hover:bg-dk-cont-low"
        type="button"
      >
        <span
          class="flex h-7 w-7 shrink-0 items-center justify-center rounded-[8px] bg-primary-cont dark:bg-dk-prim-cont"
        >
          <svg
            class="h-3.5 w-3.5 text-primary dark:text-dk-primary"
            fill="currentColor"
            viewBox="0 0 20 20"
          >
            <title>
              New notebook icon
            </title>
            <path
              d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
            />
          </svg>
        </span>
        <span
          class="text-body-md font-medium text-primary dark:text-dk-primary"
        >
          New notebook
        </span>
      </button>
      <div
        class="border-t border-outline/40 dark:border-dk-outline/40"
      >
        <ul
          class="max-h-45 overflow-y-auto"
        >
          <li>
            <button
              class="flex w-full items-center gap-2.5 px-3 py-2.5 text-left transition-colors hover:bg-container-low disabled:cursor-not-allowed disabled:opacity-60 dark:hover:bg-dk-cont-low"
              title="Add current tab to Research Notes"
              type="button"
            >
              <span
                class="flex h-7 w-7 shrink-0 items-center justify-center rounded-[8px] bg-container-low text-sm dark:bg-dk-cont-low"
              >
                📘
              </span>
              <span
                class="min-w-0 flex-1 truncate text-body-md font-medium text-ink dark:text-dk-ink"
              >
                Research Notes
              </span>
              <span
                class="shrink-0 rounded-chip bg-container-low px-1.5 py-0.5 text-label-sm text-muted dark:bg-dk-cont-low dark:text-dk-muted"
              >
                4
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
